--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,12 @@
 /* Add CSS Styling */
+
+.avatar.proportioned{
+
+    height: 300px;
+    width: 300px;
+}
+.avatar.distorted{
+    height: 400px;
+    width: 200px;
+}
+
