--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -4,24 +4,38 @@ body {
 }
 
 .card {
-  width: 400px;
+  width: 430px;
   background: #fff;
-  margin: 16px auto;
+  margin:auto;
+  padding: 8px;
+ 
 }
 
 .title {
   background: #e3f4ff;
+  margin: 8px;
+  font-size: 18px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 8px;
+  padding: 16px 8px;
+  
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 8px;
+  text-align: center;
 }
 
 button {
+  margin: 0 auto;
+  display: block;
+  padding: 8px 24px;
   background: white;
   border: 1px solid #eee;
+
 }
