--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -4,16 +4,19 @@
 }
 
 .logo {
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding-left: 20px;
+  padding-right: 20px;
+  
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  
 }
 
 a {
@@ -22,4 +25,17 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+}
+.left-links ul,
+.right-links ul
+{
+  display: flex;
+  gap: 20px;
+  
 }
