--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,12 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+  
 }
 
 .profile-image {
@@ -45,4 +51,24 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.left-side
+{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.links {
+  display: flex;
+  list-style: none;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+
+}
+.right-side{
+  display: flex;
+  gap: 16px
+  ;
 }
