--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -24,3 +24,20 @@ img {
   justify-content: center;
   background: #eee;
 }
+.Container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
+.items{
+  display: flex;
+  gap: 52px;
+  align-items: center;
+  justify-content: center;
+}
+.item{
+  width: 200px;
+  text-align: center;
+}
